--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "discord_bot_list"
+name = "discord_bots"
 version = "0.1.0"
 authors = ["Thomas-QM <thomas@engineeringvirtue.net>"]
 
