--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ failure = "0.1.3"
 failure_derive = "0.1.3"
 serde = "1.0.80"
 serde_derive = "1.0.80"
+serde_urlencoded = "0.5.3"
 reqwest = "0.9.4"
