--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "discord_bots"
 version = "0.1.1"
 authors = ["Thomas-QM <thomas@engineeringvirtue.net>"]
 readme = "./README.md"
+license-file = "./LICENSE"
 description = "API bindings for discordbots.org ...Not really tested... yet"
 repository = "https://github.com/engineeringvirtue/discord-bots.rs"
 documentation = "https://engineeringvirtue.github.io/discord-bots.rs/discord_bots/index.html"
